added collapsed options menu on smaller screen

--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -50,6 +50,12 @@
     }
 }
 
+@media (max-width: 450px) {
+    .navigation-product-name {
+        display: none;
+    }
+  }
+
 .navigation-right {
     padding-right: 20px;
     margin-left: auto;
