--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -37,7 +37,11 @@
   <div id="content_wrapper">
     <div id="sidebar_container"></div>
     <div id="app" class="app container">
-      <div tabindex="0" id="mainContent" class="location-title">
+      <div class="location-nav">
+        <div tabindex="0" id="mainContent" class="location-title">
+        </div>
+        <div class="location-options">
+        </div>
       </div>
       <div class="app-inner">
       </div>
