--- a/frontend/src/modules/location/less/location.less
+++ b/frontend/src/modules/location/less/location.less
@@ -5,6 +5,7 @@
   font-family: @font-title;
   font-size: 14px;
   background-color: @location-background-color;
+  overflow: auto;
 
   &-inner {
     color: @location-title;
