updated the global menu

--- a/frontend/src/modules/globalMenu/less/globalMenu.less
+++ b/frontend/src/modules/globalMenu/less/globalMenu.less
@@ -3,8 +3,9 @@
 .global-menu {
   display:none;
   top:60px;
+  left: 0;
   position:absolute;
-  width:260px;
+  width:300px;
   background-color:@primary-color;
   z-index: 5;
 
