--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -44,9 +44,22 @@
 
 .navigation-left {
     float: left;
+    padding-left: 20px;
 
     .navigation-product-name {
         .no-select;
+    }
+
+    .navigation-global-menu {
+        padding: 0;
+        width: 40px;
+    }
+
+    .global-menu-content-wrapper {
+        display: inline-block;
+        position: inherit;
+        width: 40px;
+        float: left;
     }
 }
 
