--- a/frontend/src/modules/navigation/templates/navigation.hbs
+++ b/frontend/src/modules/navigation/templates/navigation.hbs
@@ -1,14 +1,17 @@
 <div class="navigation-inner clearfix">
   <div class="navigation-left">
     {{#if isAuthenticated}}
-    <a href="#" class="navigation-item navigation-global-menu" data-event="globalMenu:toggle">
-      {{!-- <i class="fa fa-bars"></i> --}}
-      <div id="global-menu-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </a>
+    <div class="global-menu-content-wrapper">
+      <a href="#" class="navigation-item navigation-global-menu" data-event="globalMenu:toggle" aria-expanded="false" aria-label="Menu">
+        {{!-- <i class="fa fa-bars"></i> --}}
+        <div id="global-menu-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </a>
+      <div class="global-menu-container"></div>
+    </div>
     <div href="#" class="navigation-item navigation-product-name">{{t 'app.productname'}}</div>
     {{/if}}
   </div>
