--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -108,12 +108,12 @@
 
     .dropdown-content {
         display: none;
-        position: fixed;
-        top: 60px;
+        position: absolute;
+        top: 51px;
         background-color: #f1f1f1;
         width: 300px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        right: 0;
+        right: -17px;
         z-index: 1;
     }
 
