--- a/frontend/src/plugins/message/less/messageManagement.less
+++ b/frontend/src/plugins/message/less/messageManagement.less
@@ -53,12 +53,13 @@
 
 
 .general-ribbon {
-    height: 55px;
+    height: auto;
 }
 
 .ribbon-inner {
     width: 100%;
     height: 100%;
+    padding: 15px 0;
 }
 
 .ribbon-msg {
