fixed ribbon message

--- a/frontend/src/modules/globalMenu/less/globalMenu.less
+++ b/frontend/src/modules/globalMenu/less/globalMenu.less
@@ -2,8 +2,8 @@
 
 .global-menu {
   display:none;
-  top:60px;
-  left: 0;
+  top: 50px;
+  left: -20px;
   position:absolute;
   width:300px;
   background-color:@primary-color;
@@ -41,6 +41,10 @@
   .global-menu-item-text-inner {
     color: @white;
   }
+}
+
+.global-menu-container {
+    position: relative;
 }
 
 #global-menu-icon {
