WIP added keyboard trap for project, menu item and page context menus

--- a/frontend/src/modules/contextMenu/less/contextMenu.less
+++ b/frontend/src/modules/contextMenu/less/contextMenu.less
@@ -37,6 +37,8 @@
         .context-menu-item-open {
             display:block;
             padding:12px;
+            width:225px;
+            text-align: start;
             text-decoration: none;
             color: @context-menu-item-text-color;
             border-top: 1px solid @context-menu-item-hover-color;
