--- a/frontend/src/modules/editor/contentObject/templates/editorMenuItem.hbs
+++ b/frontend/src/modules/editor/contentObject/templates/editorMenuItem.hbs
@@ -1,8 +1,11 @@
 <div data-id="{{_id}}" data-parentId="{{_parentId}}" class="editor-menu-item-inner clearfix no-select">
   <div class="editor-menu-item-settings handle">
     <div class="editor-menu-item-settings-inner">
-      <button class="open-context-contentObject"><i class="fa fa-cog fa-fw"></i></button>
-      <button class="contentObject-delete editor-delete-contentobject-element" title="{{ t 'app.clicktodelete'}}"><i class="fa fa-trash-o"></i></button>
+      <div class="context-menu-content-container context-menu-content-container-{{_id}}">
+        <a href="#" class="open-context-menu-icon open-context-icon open-context-contentObject" aria-expanded="false"><i class="fa fa-cog fa-fw"></i></a>
+        <div class="context-menu-container" style="position:relative;"></div>
+      </div>
+      <a href="#" class="contentObject-delete editor-delete-contentobject-element" title="{{ t 'app.clicktodelete'}}"><i class="fa fa-trash-o"></i></a>
     </div>
   </div>
   <div class="editor-menu-item-content">
