--- a/frontend/src/modules/projects/templates/project.hbs
+++ b/frontend/src/modules/projects/templates/project.hbs
@@ -4,7 +4,10 @@
 
         <div class="project-settings">
           <div class="project-settings-inner">
-            <a href="#" class="open-context-icon open-context-course"><i class="fa fa-cog fa-fw"></i></a>
+            <div class="context-menu-content-container-{{_id}}">
+              <a href="#" class="open-context-menu-icon open-context-icon open-context-course" aria-expanded="false"><i class="fa fa-cog fa-fw"></i></a>
+              <div class="context-menu-container" style="position:relative;"></div>
+            </div>
             <a href="#" class="course-delete editor-delete-course-element" title="{{ t 'app.clicktodelete'}}">
                 <i class="fa fa-trash-o"></i>
             </a>
