--- a/frontend/src/modules/scaffold/less/list.less
+++ b/frontend/src/modules/scaffold/less/list.less
@@ -9,6 +9,7 @@
 
     .list-item-modal-item {
       clear: both;
+      max-width: 440px;
     }
     .list-item-description {
       font-weight: @font-weight-bold;
