--- a/frontend/src/modules/sidebar/less/sidebar.less
+++ b/frontend/src/modules/sidebar/less/sidebar.less
@@ -163,6 +163,11 @@
   }
 }
 
+.sidebar-bg {
+    background: @sidebar-color;
+    height: 100%;
+}
+
 .sidebar-inner {
     padding: 0;
     height: auto;
