--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -32,13 +32,13 @@
   {{/if}}
 </head>
 
-<body class="test">
+<body>
   <nav id="navigation_container"></nav>
   <div id="content_wrapper">
     <div id="sidebar_container"></div>
     <div id="app" class="app container">
       <div class="location-nav">
-        <div tabindex="0" id="mainContent" class="location-title">
+        <div tabindex="-1" id="mainContent" class="location-title">
         </div>
         <div class="location-options">
         </div>
