--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -67,12 +67,14 @@
     .navigation-product-name {
         display: none;
     }
-  }
+}
 
 .navigation-right {
     padding-right: 20px;
     margin-left: auto;
-
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     .navigation-user-logout {
         padding: 0px 25px;
     }
@@ -90,21 +92,36 @@
     .profile-dropbtn {
         background-color: #ffff;
         color: #000;
-        font-size: 16px;
         border: none;
-        border-radius: 50px;
+        margin: 0;
+        padding: 0;
+        border-radius: 50%;
         cursor: pointer;
+
         &:hover {
             background-color: #c3c1c1;
         }
+
         &:focus-visible {
             outline: -webkit-focus-ring-color auto 1px;
             background-color: #c3c1c1;
         }
 
+        .circle-inner {
+            color: #000;
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+            text-decoration: none;
+            height: 40px;
+            width: 40px;
+            font-size: 15px;
+        }
+
     }
 
-    .profile-dropbtn, .dropdown-content a {
+    .profile-dropbtn,
+    .dropdown-content a {
         transition: all 0.5s;
     }
 
@@ -116,17 +133,18 @@
     .profile-dropdown-menu {
         position: relative;
         display: inline-block;
+        margin-left: 10px;
         z-index: 6;
     }
 
     .dropdown-content {
         display: none;
         position: absolute;
-        top: 51px;
+        top: 52px;
         background-color: #f1f1f1;
         width: 300px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        right: -17px;
+        right: -20px;
         z-index: 1;
     }
 
@@ -139,7 +157,8 @@
     }
 
 
-    .dropdown-content a:hover, .dropdown-content a:focus-visible {
+    .dropdown-content a:hover,
+    .dropdown-content a:focus-visible {
         background-color: #c3c1c1;
     }
 
