--- a/frontend/src/modules/sidebar/templates/sidebar.hbs
+++ b/frontend/src/modules/sidebar/templates/sidebar.hbs
@@ -1,4 +1,6 @@
-<div class="sidebar-bg"></div>
+<div class="sidebar-bg">
+   <button class="collapse-sidebar"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i><span>Collapse Sidebar</span></button>
+</div>
 <div class="sidebar-inner">
 	<div class="sidebar-breadcrumb">
 	</div>
