--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -20,6 +20,7 @@
   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
   <meta http-equiv="Pragma" content="no-store, no-cache" />
   <meta http-equiv="Expires" content="0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   {{#if useAnalytics}}
   <!-- Google Analytics -->
   <script>
