--- a/frontend/src/modules/editor/contentObject/less/editorPageComponent.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPageComponent.less
@@ -1,5 +1,5 @@
 .component {
-    overflow: hidden;
+    overflow: visible;
     position: relative;
     min-height: 90px;
     background-color: #D6F3F9;
