--- a/frontend/src/modules/editor/contentObject/less/editorPageBlock.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPageBlock.less
@@ -1,7 +1,7 @@
 .block {
     background-color:#EAF8FB;
     border: 1px solid #D3E2E5;
-    position: relative;
+    // position: relative;
     margin-bottom: 20px;
     padding-top: 10px;
     border-radius: 3px;
