--- a/frontend/src/modules/projects/less/qproject.less
+++ b/frontend/src/modules/projects/less/qproject.less
@@ -4,7 +4,7 @@
 
 .project-list-item {
   position:relative;
-  overflow:visible;
+  overflow:hidden;
   border-radius:3px;
   background-color: @white;
   color: @adapt-primary-color;
