--- a/frontend/src/modules/navigation/less/navigation.less
+++ b/frontend/src/modules/navigation/less/navigation.less
@@ -4,7 +4,10 @@
 
 .navigation {
     width: 100%;
-    height: 60px;
+    min-height: 60px;
+    height: auto;
+    display: flex;
+    align-items: center;
     z-index: 500;
     background-color: @adapt-topbar-color;
     background-position: right;
