--- a/frontend/src/modules/sidebar/templates/sidebar.hbs
+++ b/frontend/src/modules/sidebar/templates/sidebar.hbs
@@ -1,7 +1,7 @@
 <div class="sidebar-bg">
-   <button class="collapse-sidebar"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i><span>Collapse Sidebar</span></button>
+   <button class="collapse-sidebar"><i class="fa {{_icon}}" aria-hidden="true"></i><span>Collapse Sidebar</span></button>
 </div>
-<div class="sidebar-inner">
+<div class="sidebar-inner {{#if _displayNone}}display-none{{/if}}">
 	<div class="sidebar-breadcrumb">
 	</div>
 	<div class="sidebar-item-container">
