finished styles/a11y of mobile sidebar

--- a/frontend/src/modules/sidebar/templates/sidebar.hbs
+++ b/frontend/src/modules/sidebar/templates/sidebar.hbs
@@ -1,5 +1,5 @@
 <div class="sidebar-bg">
-   <button class="collapse-sidebar"><i class="fa {{_icon}}" aria-hidden="true"></i><span>Collapse Sidebar</span></button>
+   <button class="collapse-sidebar" aria-label="Side Menu" aria-exapanded="false"><i class="fa {{_icon}}" aria-hidden="true"></i><span>Collapse Sidebar</span></button>
 </div>
 <div class="sidebar-inner {{#if _displayNone}}display-none{{/if}}">
 	<div class="sidebar-breadcrumb">
