fixed visual issue in help dialog for mobile

--- a/frontend/src/core/less/mobile.less
+++ b/frontend/src/core/less/mobile.less
@@ -44,6 +44,10 @@ screen and (min-resolution: 2dppx) {
         display: none !important;
     }
 
+    .help-dialog-content-wrapper {
+        width: 100%!important;
+    }
+
     .location-nav {
         flex-wrap: nowrap !important;
     }
