added aria labels for the different context menus

--- a/frontend/src/modules/editor/contentObject/templates/editorPage.hbs
+++ b/frontend/src/modules/editor/contentObject/templates/editorPage.hbs
@@ -2,7 +2,7 @@
   <div class="page-detail">
     <h4 class="page-name title">
       <span class="context-menu-content-container context-menu-page-content-container-{{_id}}">
-        <a href="#" class="open-page-context-menu-icon page-edit-button" title="{{t 'app.clicktoedit'}}" aria-expanded="false"><i class="fa fa-cog fa-fw"></i></a>
+        <a href="#" class="open-page-context-menu-icon page-edit-button" title="{{t 'app.clicktoedit'}}" aria-expanded="false" aria-label="{{t 'app.pagemenu'}}"><i class="fa fa-cog fa-fw"></i></a>
         <span class="page-context-menu-container" style="position:relative;"></span>
       </span>
       {{#if displayTitle}}{{displayTitle}}{{else}}{{title}}{{/if}}
