--- a/frontend/src/modules/editor/global/templates/partials/part_editorItemSidebar.hbs
+++ b/frontend/src/modules/editor/global/templates/partials/part_editorItemSidebar.hbs
@@ -3,7 +3,7 @@
 
     <span class="context-menu-content-container context-menu-{{_type}}-content-container-{{_id}}">
       <a href="#" class="open-{{_type}}-context-menu-icon open-context-icon open-context-{{_type}}" title="{{t 'app.clicktoedit'}}"
-        aria-expanded="false">
+        aria-expanded="false" aria-label="{{ _arialabel }}">
         <i class="fa fa-cog fa-fw"></i>
       </a>
       <span class="{{_type}}-context-menu-container" style="position:relative;"></span>
