--- a/frontend/src/modules/projects/templates/project.hbs
+++ b/frontend/src/modules/projects/templates/project.hbs
@@ -5,7 +5,7 @@
         <div class="project-settings">
           <div class="project-settings-inner">
             <span class="context-menu-project-content-container-{{_id}}">
-              <a href="#" class="open-project-context-menu-icon open-context-icon open-context-course" aria-expanded="false"><i class="fa fa-cog fa-fw"></i></a>
+              <a href="#" class="open-project-context-menu-icon open-context-icon open-context-course" aria-expanded="false" aria-label="{{t 'app.coursemenu'}}"><i class="fa fa-cog fa-fw"></i></a>
               <span class="project-context-menu-container" style="position:relative;"></span>
             </span>
             <a href="#" class="course-delete editor-delete-course-element" title="{{ t 'app.clicktodelete'}}">
