--- a/frontend/src/modules/editor/contentObject/templates/editorMenuItem.hbs
+++ b/frontend/src/modules/editor/contentObject/templates/editorMenuItem.hbs
@@ -2,7 +2,7 @@
   <div class="editor-menu-item-settings handle">
     <div class="editor-menu-item-settings-inner">
       <span class="context-menu-content-container context-menu-menuitem-content-container-{{_id}}">
-        <a href="#" class="open-menuitem-context-menu-icon open-context-icon open-context-contentObject" aria-expanded="false"><i class="fa fa-cog fa-fw"></i></a>
+        <a href="#" class="open-menuitem-context-menu-icon open-context-icon open-context-contentObject" aria-expanded="false" aria-label="{{t 'app.pagemenu'}}"><i class="fa fa-cog fa-fw"></i></a>
         <span class="menuitem-context-menu-container" style="position:relative;"></span>
       </span>
       <a href="#" class="contentObject-delete editor-delete-contentobject-element" title="{{ t 'app.clicktodelete'}}"><i class="fa fa-trash-o"></i></a>
