base modal css + returning values to form

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -1,3 +1,13 @@
-<div class="pin-finder-inner">
-  {{src}}
+<div class="pin-finder-overlay">
+  <div class="pin-finder-inner">
+    <div class="pin-finder-image-container">
+      <div class="pin-finder-image-wrapper">
+        <image src="{{src}}" />
+      </div>
+    </div>
+    <div class="pin-finder-menu-bar">
+      <button class="apply btn primary">Apply</button>
+      <button class="cancel btn action-secondary">Cancel</button>
+    </div>
+  </div>
 </div>
