--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -1,9 +1,71 @@
 .guided-tour-pin-finder-modal {
     position: fixed;
-    left: 2.5%;
-    top: 2.5%;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.6);
+    z-index: 500;
+}
+
+.pin-finder-overlay {
     width: 95%;
     height: 95%;
-    background: #cfcfcf;
-    z-index: 500;
+    position: absolute;
+    left: 2.5%;
+    top: 2.5%;
+    background: #fff;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+
+.pin-finder-inner {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+
+    .pin-finder-image-container {
+        height: auto;
+        padding: 0;
+        background: #E6E6E6;
+        width: calc(100% - 125px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow-y: auto;
+
+        .pin-finder-image-wrapper {
+            height: auto;
+            user-select: none;
+            margin: auto;
+            background: #fff;
+            padding: 30px;
+            max-width: 840px;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+
+
+
+    .pin-finder-menu-bar {
+        height: auto;
+        width: 125px;
+        background: #263944;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 15px;
+
+        button {
+            width: 100%;
+        }
+
+        .apply {
+            margin-bottom: 5px;
+        }
+    }
 }
