WIP started integrating shepherd + events

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -1,5 +1,7 @@
 <div class="pin-finder-overlay">
   <div class="pin-finder-inner">
+     <div id="target" onmousedown="startDragging(event)" ondragstart="return false">
+                </div>
     <div class="pin-finder-image-container">
       <div class="pin-finder-image-wrapper">
         <image src="{{src}}" />
