--- a/frontend/src/core/less/_reset.less
+++ b/frontend/src/core/less/_reset.less
@@ -7,7 +7,7 @@ nav, section, time, mark, audio, video {margin: 0; padding: 0; border: 0;
 outline: 0; font-size: 100%; vertical-align: baseline; background: transparent;}
 article, aside, figure, footer, header, hgroup, nav, section {display: block;}
 img, object, embed {max-width: 100%;}
-html {overflow-y: auto;}
+html {overflow-y: auto; overflow-x: hidden;}
 ul li {margin-left:20px;}
 ol li {
     margin-left: 20px;
