--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -1,3 +1,16 @@
+#target {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    cursor: move;
+    user-select: none;
+    z-index: 99999999!important;
+    left: 0px;
+    top: 0px;
+}
+
 .guided-tour-pin-finder-modal {
     position: fixed;
     left: 0;
@@ -6,6 +19,10 @@
     height: 100%;
     background: rgba(255, 255, 255, 0.6);
     z-index: 500;
+
+    .shepherd-content {
+        user-select: none;
+    }
 }
 
 .pin-finder-overlay {
@@ -40,7 +57,7 @@
             margin: auto;
             background: #fff;
             padding: 30px;
-            max-width: 840px;
+            max-width: 904px;
 
             img {
                 width: 100%;
