WIP working on events

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -6,7 +6,7 @@
     border-radius: 50%;
     cursor: move;
     user-select: none;
-    z-index: 99999999!important;
+    z-index: 99999999 !important;
     left: 0px;
     top: 0px;
 }
@@ -83,6 +83,15 @@
 
         .apply {
             margin-bottom: 5px;
+        }
+
+        .pin-finder-controls {
+            color: #fff;
+            width: 100%;
+            margin-top: 15px;
+            div {
+                margin-bottom: 5px;
+            }
         }
     }
 }
