--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -1,7 +1,5 @@
 <div class="pin-finder-overlay">
   <div class="pin-finder-inner">
-     <div id="target" onmousedown="startDragging(event)" ondragstart="return false">
-                </div>
     <div class="pin-finder-image-container">
       <div class="pin-finder-image-wrapper">
         <image src="{{src}}" />
@@ -10,6 +8,10 @@
     <div class="pin-finder-menu-bar">
       <button class="apply btn primary">Apply</button>
       <button class="cancel btn action-secondary">Cancel</button>
+      <div class="pin-finder-controls">
+        <div>Left: <span class="left"></span></div>
+        <div>Top: <span class="top"></span></div>
+      </div>
     </div>
   </div>
 </div>
