--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -91,11 +91,8 @@
             margin-top: 15px;
             div {
                 margin-bottom: 5px;
+                user-select: none;
             }
         }
     }
-}
-
-.shepherd-element {
-    transition: none !important;
 }
