--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -89,10 +89,19 @@
             color: #fff;
             width: 100%;
             margin-top: 15px;
-            div {
+            div.position {
                 margin-bottom: 5px;
                 user-select: none;
             }
+            label {
+                display: block;
+                margin-top: 15px;
+                margin-bottom: 5px;
+            }
         }
     }
+}
+
+.pin-finder-spectrum {
+    width: 317px;
 }
