--- a/frontend/src/modules/scaffold/templates/field.hbs
+++ b/frontend/src/modules/scaffold/templates/field.hbs
@@ -2,6 +2,7 @@
 <div
   class="field{{#if title}} field-{{stringToClassName title}}{{else}}{{#if legend}} field-object field-object-{{stringToClassName legend}}{{/if}}{{/if}}{{#if isDefaultValue}} is-default-value{{/if}}"
   data-editor-id="{{editorId}}" data-type="{{#if inputType.type}}{{inputType.type}}{{else}}{{inputType}}{{/if}}">
+  {{#unless noTitle}}
   {{#if title}}
   <label for="{{editorId}}" title="{{key}}">{{titleLabel}}</label>
   {{#if help}}
@@ -22,9 +23,9 @@
     <i class="fa fa-undo"></i>
   </button>
   {{#ifEquals fieldType "Object"}}
-    {{#if secondaryLabel}}
-    <span class="field-secondary-info">{{{secondaryLabel}}}</span>
-    {{/if}}
+  {{#if secondaryLabel}}
+  <span class="field-secondary-info">{{{secondaryLabel}}}</span>
+  {{/if}}
   {{/ifEquals}}
   {{else}}
   {{#if legend}}
@@ -33,7 +34,7 @@
   </div>
   {{/if}}
   {{/if}}
-
+  {{/unless}}
   <div class="field-editor{{#unless title}}{{#if legend}} collapsed{{/if}}{{/unless}}">
     <div class="field-error" data-error></div>
     <span data-editor></span>
