--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -29,5 +29,8 @@
         <input type="text" class="width-30" id="bubbleColor" autocomplete="off">
       </div>
     </div>
+    <div class="pin-finder-mobile-fallback-message-container">
+      <p>{{ t 'app.pinfinder.mobilefallbackmessage' }}</p>
+    </div>
   </div>
 </div>
