added bullseye draggable pin for better ux

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -2,13 +2,53 @@
     position: absolute;
     width: 10px;
     height: 10px;
-    background-color: red;
+    background-color: transparent;
     border-radius: 50%;
+    user-select: none;
+    z-index: 99999999 !important;
+    left: 0px;
+    top: 0px;
+}
+
+#bullseye {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    outline: 1px solid black;
     cursor: move;
     user-select: none;
     z-index: 99999999 !important;
     left: 0px;
     top: 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    transition: opacity 0.2s;
+    &:active {
+        opacity: 0.4;
+    }
+    div:nth-child(2), div:nth-child(3) {
+        background: #fff;
+    }
+    div:nth-child(1), div:nth-child(4) {
+        background: #000;
+    }
+    .box1 {
+        border-radius: 50px 0 0 0;
+    }
+
+    .box2 {
+        border-radius: 0 50px 0 0;
+    }
+
+    .box3 {
+        border-radius: 0 0 0 50px;
+    }
+
+    .box4 {
+        border-radius: 0 0 50px 0;
+    }
 }
 
 .guided-tour-pin-finder-modal {
