--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -2,7 +2,7 @@
   <div class="pin-finder-inner">
     <div class="pin-finder-image-container">
       <div class="pin-finder-image-wrapper">
-        <image src="{{src}}" />
+        <image draggable="false" src="{{stepData.src}}" />
       </div>
     </div>
     <div class="pin-finder-menu-bar">
