--- a/frontend/src/libraries/shepherd/shepherd.less
+++ b/frontend/src/libraries/shepherd/shepherd.less
@@ -284,7 +284,7 @@
 
 .shepherd-cancel-icon {
     color: #fff!important;
-    cursor: not-allowed;
+    cursor: not-allowed!important;
 }
 
 .shepherd-cancel-icon:hover {
