--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -26,7 +26,10 @@
     grid-template-rows: 1fr 1fr;
     transition: opacity 0.2s;
     &:active {
-        opacity: 0.4;
+        opacity: 0.8;
+    }
+    &:active > div {
+        opacity: 0.2;
     }
     div:nth-child(2), div:nth-child(3) {
         background: #fff;
