--- a/frontend/src/modules/scaffold/templates/scaffoldGuidedTourPinFinder.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldGuidedTourPinFinder.hbs
@@ -1,1 +1,2 @@
-<button class="btn edit-pin-position">Step Editor</button>
+<button class="btn edit-pin-position {{#unless imageReady}}disabled{{/unless}}">Step Editor</button>
+<div class="field-error" data-error=""></div>
