handled detection and styling of half-width

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -105,6 +105,10 @@
             img {
                 width: 100%;
             }
+
+            &.half-width {
+                max-width: 452px!important;
+            }
         }
     }
 
