--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -31,6 +31,7 @@
     </div>
     <div class="pin-finder-mobile-fallback-message-container">
       <p>{{ t 'app.pinfinder.mobilefallbackmessage' }}</p>
+      <button class="cancel btn action-secondary">Cancel</button>
     </div>
   </div>
 </div>
