added missing translations

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -6,32 +6,32 @@
       </div>
     </div>
     <div class="pin-finder-menu-bar">
-      <button class="apply btn primary">Apply</button>
-      <button class="cancel btn action-secondary">Cancel</button>
+      <button class="apply btn primary">{{ t 'app.coloursave' }}</button>
+      <button class="cancel btn action-secondary">{{ t 'app.themepresetcancel' }}</button>
       <div class="pin-finder-controls">
-        <div class="position">Left: <span class="left"></span></div>
-        <div class="position">Top: <span class="top"></span></div>
-        <label for="_pinfinder_bubbledirection">Bubble Direction:</label>
+        <div class="position">{{ t 'app.scaffold.component._pin._left.label' }}: <span class="left"></span></div>
+        <div class="position">{{ t 'app.scaffold.component._pin._top.label' }}: <span class="top"></span></div>
+        <label for="_pinfinder_bubbledirection">{{ t 'app.scaffold.component._pin._bubbledirection.label' }}:</label>
         <select id="_pinfinder_bubbledirection" name="_bubbledirection">
-          <option id="none" value="none" {{#ifValueEquals stepData.direction "none" }} selected{{/ifValueEquals}}>none
+          <option id="none" value="none" {{#ifValueEquals stepData.direction "none" }} selected{{/ifValueEquals}}>{{ t 'app.scaffold._bubbledirection.none.variable' }}
           </option>
-          <option id="left" value="left" {{#ifValueEquals stepData.direction "left" }} selected{{/ifValueEquals}}>left
+          <option id="left" value="left" {{#ifValueEquals stepData.direction "left" }} selected{{/ifValueEquals}}>{{ t 'app.scaffold._bubbledirection.left.variable' }}
           </option>
           <option id="right" value="right" {{#ifValueEquals stepData.direction "right" }} selected{{/ifValueEquals}}>
-            right</option>
-          <option id="top" value="top" {{#ifValueEquals stepData.direction "top" }} selected{{/ifValueEquals}}>top
+            {{ t 'app.scaffold._bubbledirection.right.variable' }}</option>
+          <option id="top" value="top" {{#ifValueEquals stepData.direction "top" }} selected{{/ifValueEquals}}>{{ t 'app.scaffold._bubbledirection.top.variable' }}
           </option>
           <option id="bottom" value="bottom" {{#ifValueEquals stepData.direction "bottom" }} selected{{/ifValueEquals}}>
-            bottom</option>
+            {{ t 'app.scaffold._bubbledirection.bottom.variable' }}</option>
         </select>
-        <label class="label-picker" for="bubbleColor">Bubble Border Color:
+        <label class="label-picker" for="bubbleColor">{{ t 'app.scaffold.component._pin._bordercolor.label' }}:
         </label>
         <input type="text" class="width-30" id="bubbleColor" autocomplete="off">
       </div>
     </div>
     <div class="pin-finder-mobile-fallback-message-container">
       <p>{{ t 'app.pinfinder.mobilefallbackmessage' }}</p>
-      <button class="cancel btn action-secondary">Cancel</button>
+      <button class="cancel btn action-secondary">{{ t 'app.themepresetcancel' }}</button>
     </div>
   </div>
 </div>
