added more translations for the custom pin editor

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -9,8 +9,8 @@
       <button class="apply btn primary">{{ t 'app.coloursave' }}</button>
       <button class="cancel btn action-secondary">{{ t 'app.themepresetcancel' }}</button>
       <div class="pin-finder-controls">
-        <div class="position">{{ t 'app.scaffold.component._pin._left.label' }}: <span class="left"></span></div>
-        <div class="position">{{ t 'app.scaffold.component._pin._top.label' }}: <span class="top"></span></div>
+        <div class="position">{{ t 'app.layoutleft' }}: <span class="left"></span></div>
+        <div class="position">{{ t 'app.top' }}: <span class="top"></span></div>
         <label for="_pinfinder_bubbledirection">{{ t 'app.scaffold.component._pin._bubbledirection.label' }}:</label>
         <select id="_pinfinder_bubbledirection" name="_bubbledirection">
           <option id="none" value="none" {{#ifValueEquals stepData.direction "none" }} selected{{/ifValueEquals}}>{{ t 'app.scaffold._bubbledirection.none.variable' }}
