--- a/frontend/src/modules/scaffold/templates/scaffoldGuidedTourPinFinder.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldGuidedTourPinFinder.hbs
@@ -1,2 +1,2 @@
-<button class="btn edit-pin-position {{#unless imageReady}}disabled{{/unless}}">Step Editor</button>
+<button class="btn edit-pin-position {{#unless imageReady}}disabled{{/unless}}">{{ t 'app.pineditor' }}</button>
 <div class="field-error" data-error=""></div>
