added handling of forceFullWidth

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -109,6 +109,9 @@
             &.half-width {
                 max-width: 452px!important;
             }
+            &.force-full-width {
+                width: 100%;
+            }
         }
     }
 
