WIP added warning message and reset pin coordinates if image is too large

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -9,6 +9,7 @@
       <button class="apply btn primary">{{ t 'app.coloursave' }}</button>
       <button class="cancel btn action-secondary">{{ t 'app.themepresetcancel' }}</button>
       <div class="pin-finder-controls">
+        <div class="pin-finder-img-too-high hidden"></div>
         <div class="position">{{ t 'app.layoutleft' }}: <span class="left"></span></div>
         <div class="position">{{ t 'app.top' }}: <span class="top"></span></div>
         <label for="_pinfinder_bubbledirection">{{ t 'app.scaffold.component._pin._bubbledirection.label' }}:</label>
