--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -189,3 +189,15 @@
         display: none !important;
     }
 }
+
+.pin-finder-img-too-high {
+    color: red;
+    background: white;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px 0;
+}
+
+.hidden {
+    display: none;
+}
